# catkin_ws

./: 2020-07-27-20-45-42.bag
devel/: .catkin  .rosinstall  setup.sh
devel/include/beginner_tutorials/: AddTwoIntsRequest.h  AddTwoIntsResponse.h  AngleArray.h  coordinates.h
devel/include/gazebo_msgs/: ApplyBodyWrenchRequest.h  ApplyBodyWrenchResponse.h  ApplyJointEffortRequest.h  ApplyJointEffortResponse.h  BodyRequestRequest.h  BodyRequestResponse.h  ContactState.h  ContactsState.h  DeleteLightRequest.h  DeleteLightResponse.h  DeleteModelRequest.h  DeleteModelResponse.h  GetJointPropertiesRequest.h  GetJointPropertiesResponse.h  GetLightPropertiesRequest.h  GetLightPropertiesResponse.h  GetLinkPropertiesRequest.h  GetLinkPropertiesResponse.h  GetLinkStateRequest.h  GetLinkStateResponse.h  GetModelPropertiesRequest.h  GetModelPropertiesResponse.h  GetModelStateRequest.h  GetModelStateResponse.h  GetPhysicsPropertiesRequest.h  GetPhysicsPropertiesResponse.h  GetWorldPropertiesRequest.h  GetWorldPropertiesResponse.h  JointRequestRequest.h  JointRequestResponse.h  LinkState.h  LinkStates.h  ModelState.h  ModelStates.h  ODEJointProperties.h  (+20 more)
install/: .rosinstall  local_setup.sh
src/agripper/: CMakeLists.txt  README.md  package.xml
src/agripper/launch/: start.launch
src/agripper/scripts/: home.py  length2steps.py  move_node.py  read_location.py
src/agripper/serial_v1/: serial_v1.ino
src/agripper/serial_v2.ino/: serial_v2.ino.ino
src/agripper/serial_v3_teensy/: serial_v3_teensy.ino
src/beginner_tutorials/: CMakeLists.txt
src/robotic_arm/: README.md
(+162 files in other folders)
